ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef BOOL (*AntesArquivoCallback) (void);


typedef PCHAR (*CryptCallback) (PCHAR value);


typedef void (*NoArgumentsCallback) (void);


typedef PCHAR (*OnGetChaveCallback) (void);


typedef struct
{
	char NOME_ARQUIVO[51];
	char MD5[33];
} TECFArquivo;


typedef struct
{
	double ValorGT;
	char NumeroSerie[30];
	int CRO;
	int CNI;
	double DtHrAtualizado;
} TECFAutorizado;


typedef void (*VerificarRecomporNumSerieCallback) (PCHAR NumSerie,double ValorGT,int *CRO,int *CNI);


typedef double (*VerificarRecomporValorGTCallback) (PCHAR NumSerie);



// Funções

DllImport int AAC_AbrirArquivo(const INTPTR aacHandle);

DllImport int AAC_AchaECF(const INTPTR aacHandle, const PCHAR numSerie, TECFAutorizado* ECF);

DllImport int AAC_AchaIndiceECF(const INTPTR aacHandle, const PCHAR numSerie, int* indice);

DllImport int AAC_AtualizarMD5(const INTPTR aacHandle, const PCHAR md5);

DllImport int AAC_AtualizarValorGT(const INTPTR aacHandle, const PCHAR numSerie, const double grandeTotal);

DllImport int AAC_IdentPaf_ArquivoListaAutenticados_GetMD5(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_ArquivoListaAutenticados_GetNome(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_ArquivoListaAutenticados_SetMD5(const INTPTR aacHandle, const PCHAR buffer);

DllImport int AAC_IdentPaf_ArquivoListaAutenticados_SetNome(const INTPTR aacHandle, const PCHAR buffer);

DllImport int AAC_IdentPaf_ECFsAutorizados_Count(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_ECFsAutorizados_Get(const INTPTR aacHandle, TECFAutorizado* retAutorizado, const int index);

DllImport int AAC_IdentPaf_ECFsAutorizados_New(const INTPTR aacHandle, const TECFAutorizado ecfAutorizado);

DllImport int AAC_IdentPaf_OutrosArquivos_Clear(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_OutrosArquivos_Count(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_OutrosArquivos_Get(const INTPTR aacHandle, TECFArquivo* ecfArquivo, const int index);

DllImport int AAC_IdentPaf_OutrosArquivos_New(const INTPTR aacHandle, const TECFArquivo ecfArquivo);

DllImport int AAC_SalvarArquivo(const INTPTR aacHandle);

DllImport int AAC_SetAntesGravarArquivo(const INTPTR aacHandle, const AntesArquivoCallback method);

DllImport int AAC_SetOnAntesAbrirArquivo(const INTPTR aacHandle, const AntesArquivoCallback method);

DllImport int AAC_SetOnCrypt(const INTPTR aacHandle, const CryptCallback method);

DllImport int AAC_SetOnDeCrypt(const INTPTR aacHandle, const CryptCallback method);

DllImport int AAC_SetOnDepoisAbrirArquivo(const INTPTR aacHandle, const NoArgumentsCallback method);

DllImport int AAC_SetOnDepoisGravarArquivo(const INTPTR aacHandle, const NoArgumentsCallback method);

DllImport int AAC_SetOnGetChave(const INTPTR aacHandle, const OnGetChaveCallback method);

DllImport int AAC_SetVerificarRecomporNumSerie(const INTPTR aacHandle, const VerificarRecomporNumSerieCallback method);

DllImport int AAC_SetVerificarRecomporValor(const INTPTR aacHandle, const VerificarRecomporValorGTCallback method);

DllImport int AAC_VerificaReCarregarArquivo(const INTPTR aacHandle);

DllImport int AAC_VerificarGTECF(const INTPTR aacHandle, const PCHAR numSerie, double* grandeTotal);