ACBrFramework.Net/ACBrFramework.Net/AAC/ACBrAACInterop.cs


		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_ECFsAutorizados_New(IntPtr aacHandle, TECFAutorizado ecfAutorizado);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_ECFsAutorizados_Get(IntPtr aacHandle, ref TECFAutorizado retAutorizado, int index);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_ECFsAutorizados_Count(IntPtr aacHandle);

		#endregion ECFs Autorizadas

		#region Outros Arquivos

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_OutrosArquivos_Clear(IntPtr aacHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_OutrosArquivos_New(IntPtr aacHandle, TECFArquivo ecfArquivo);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_OutrosArquivos_Get(IntPtr aacHandle, ref TECFArquivo ecfArquivo, int index);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_OutrosArquivos_Count(IntPtr aacHandle);

		#endregion Outros Arquivos

		#region ArquivoListaAutenticados

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_ArquivoListaAutenticados_GetNome(IntPtr aacHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_ArquivoListaAutenticados_SetNome(IntPtr aacHandle, string buffer);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_ArquivoListaAutenticados_GetMD5(IntPtr aacHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_IdentPaf_ArquivoListaAutenticados_SetMD5(IntPtr aacHandle, string buffer);

		#endregion ArquivoListaAutenticados

		#endregion Propriedades do Componente

		#region Métodos do Componente

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_AbrirArquivo(IntPtr aacHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SalvarArquivo(IntPtr aacHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_VerificaReCarregarArquivo(IntPtr aacHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_VerificarGTECF(IntPtr aacHandle, string numSerie, ref double grandeTotal);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_AtualizarValorGT(IntPtr aacHandle, string numSerie, double grandeTotal);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_AchaECF(IntPtr aacHandle, string numSerie, ref TECFAutorizado ECF);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_AchaIndiceECF(IntPtr aacHandle, string numSerie, ref int indice);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_AtualizarMD5(IntPtr aacHandle, string md5);

		#endregion Métodos do Componente

		#region Events

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetOnAntesAbrirArquivo(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] AntesArquivoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetAntesGravarArquivo(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] AntesArquivoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetOnCrypt(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] CryptCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetOnDeCrypt(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] CryptCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetOnDepoisAbrirArquivo(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] NoArgumentsCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetOnDepoisGravarArquivo(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] NoArgumentsCallback method);
		
		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetOnGetChave(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] OnGetChaveCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetVerificarRecomporNumSerie(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] VerificarRecomporNumSerieCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int AAC_SetVerificarRecomporValor(IntPtr aacHandle, [MarshalAs(UnmanagedType.FunctionPtr)] VerificarRecomporValorGTCallback method);


		#endregion Events

		#endregion ACBrACC
	}
}